// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertBar renders with defaultProps 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--small ax-alert-bar--info"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--info ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M10.5 14h-5v-1.25h1.25V7H5.5V5.75h3.75v7h1.25V14zM9.375 3c0 .759-.617 1.375-1.375 1.375A1.376 1.376 0 0 1 6.625 3c0-.758.617-1.375 1.375-1.375S9.375 2.242 9.375 3z\\" fill=\\"currentColor\\" fill-rule=\\"evenodd\\"/>",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBar renders with onRemoveClick 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--small ax-alert-bar--info"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--info ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M10.5 14h-5v-1.25h1.25V7H5.5V5.75h3.75v7h1.25V14zM9.375 3c0 .759-.617 1.375-1.375 1.375A1.376 1.376 0 0 1 6.625 3c0-.758.617-1.375 1.375-1.375S9.375 2.242 9.375 3z\\" fill=\\"currentColor\\" fill-rule=\\"evenodd\\"/>",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <a
          className="ax-link ax-link--style-night"
          onClick={[Function]}
        >
          <svg
            className="ax-icon ax-icon--cross"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M8 8l-4.25 4.25L8 8 3.75 3.75 8 8zm0 0l4.25-4.25L8 8l4.25 4.25L8 8z\\" fill-rule=\\"nonzero\\" stroke=\\"currentColor\\" stroke-width=\\"2.1\\" fill=\\"none\\"/>",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBar renders with size medium 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--medium ax-alert-bar--info"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--info ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M10.5 14h-5v-1.25h1.25V7H5.5V5.75h3.75v7h1.25V14zM9.375 3c0 .759-.617 1.375-1.375 1.375A1.376 1.376 0 0 1 6.625 3c0-.758.617-1.375 1.375-1.375S9.375 2.242 9.375 3z\\" fill=\\"currentColor\\" fill-rule=\\"evenodd\\"/>",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBar renders with size small 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--small ax-alert-bar--info"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--info ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M10.5 14h-5v-1.25h1.25V7H5.5V5.75h3.75v7h1.25V14zM9.375 3c0 .759-.617 1.375-1.375 1.375A1.376 1.376 0 0 1 6.625 3c0-.758.617-1.375 1.375-1.375S9.375 2.242 9.375 3z\\" fill=\\"currentColor\\" fill-rule=\\"evenodd\\"/>",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBar renders with type error 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--small ax-alert-bar--error"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--error ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--warning"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M6.25 2h3.5l-.5 8.25h-2.5L6.25 2zm.375 11c0-.759.617-1.375 1.375-1.375s1.375.616 1.375 1.375c0 .758-.617 1.375-1.375 1.375A1.377 1.377 0 0 1 6.625 13z\\" fill=\\"currentColor\\" fill-rule=\\"evenodd\\"/>",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBar renders with type info 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--small ax-alert-bar--info"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--info ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--information"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M10.5 14h-5v-1.25h1.25V7H5.5V5.75h3.75v7h1.25V14zM9.375 3c0 .759-.617 1.375-1.375 1.375A1.376 1.376 0 0 1 6.625 3c0-.758.617-1.375 1.375-1.375S9.375 2.242 9.375 3z\\" fill=\\"currentColor\\" fill-rule=\\"evenodd\\"/>",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBar renders with type success 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--small ax-alert-bar--success"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--success ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--tick"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M3.25 8.25L6 11l6.75-6.75\\" fill-rule=\\"nonzero\\" stroke=\\"currentColor\\" stroke-width=\\"2.1\\" fill=\\"none\\"/>",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBar renders with type warning 1`] = `
<div
  className="ax-alert-bar ax-alert-bar--small ax-alert-bar--warning"
>
  <div
    className="ax-grid__container ax-space--x6"
  >
    <div
      className="ax-grid ax-grid--gutters-horizontal--tiny ax-grid--gutters-vertical--tiny ax-grid--vertical-middle ax-grid--wrap"
    >
      <div
        className="ax-grid__cell ax-grid__cell--shrink"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        <div
          className="ax-alert-icon ax-alert-icon--subtle ax-alert-icon--small ax-alert-icon--warning ax-theme--day"
        >
          <svg
            className="ax-icon ax-icon--warning"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M6.25 2h3.5l-.5 8.25h-2.5L6.25 2zm.375 11c0-.759.617-1.375 1.375-1.375s1.375.616 1.375 1.375c0 .758-.617 1.375-1.375 1.375A1.377 1.377 0 0 1 6.625 13z\\" fill=\\"currentColor\\" fill-rule=\\"evenodd\\"/>",
              }
            }
            style={
              Object {
                "height": "1rem",
                "width": "1rem",
              }
            }
            viewBox="0 0 16 16"
          />
        </div>
      </div>
      <div
        className="ax-grid__cell ax-text--color-night ax-text--strong"
        style={
          Object {
            "width": undefined,
          }
        }
      >
        Lorem
      </div>
    </div>
  </div>
</div>
`;
